--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@
 /* Works on Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
     width: 8px;
-    height: 4px;
+    height: 8px;
 }
 
 *::-webkit-scrollbar-track {
@@ -66,15 +66,16 @@ row {
 }
 
 #movies button {
-    margin: 10px 0;
+    
 }
 
 #movies div {
-    margin: 2px 0;
+    
 }
 
 .modal {
     padding: 0;
+    overflow: hidden;
 }
 
 .modal-footer button {
@@ -151,9 +152,36 @@ nav {
     padding: 0;
 }
 
+.new-button-1 {
+    width:100%;
+    height: 7vh;
+    font-size: 0.8em;
+    border: 0;
+    border-radius: 10px 10px 0 0;
+    pointer-events: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.new-button-2 {
+    width: 100%;
+    border-radius: 0 0 10px 10px;
+    height: 5vh;
+}
+
+.movie-year {
+    display: none;
+}
+
 #search-title, #now-playing, #listnow {
     display: none;
     margin: 0 3vw;
+}
+
+#movies .movie, #movies-np .movie {
+    margin-bottom: 2vh;
 }
 
 @media screen and (max-width: 767px) {
@@ -164,5 +192,15 @@ nav {
     
     .search-form {
         width: 100%;
+    }
+    
+    .new-button-2 {
+        font-size: 14px;
+        height: auto;
+    }
+    
+    .new-button-1 {
+        height: 10vh;
+        font-size: 0.7em;
     }
 }
