--- a/main.css
+++ b/main.css
@@ -184,6 +184,11 @@ nav {
     margin-bottom: 2vh;
 }
 
+#movies-np div, #movies div {
+    padding-left: 0!important;
+    grid-gap: 10px;
+}
+
 @media screen and (max-width: 767px) {
     .search-movie input {
         height: 7vh;
